feat: Major improvements and fixes
✨ Features Added:
- Complete CI/CD pipeline with GitHub Actions
- Comprehensive testing framework (unit, integration, infrastructure)
- Production-ready Dockerfile with multi-stage build
- Kubernetes monitoring with Prometheus alerting rules
- Terraform infrastructure improvements and validation
- Enhanced security with proper secret management

🐛 Bug Fixes:
- Fixed blackjack split hands randomization bug
- Fixed admin panel dark theme display
- Fixed split hands result display
- Fixed hand reference sharing issues in split gameplay
- Fixed Terraform deprecated addon_profile configuration

🔧 Infrastructure:
- Added persistent volume claims for data storage
- Enhanced Kubernetes deployment with health checks
- Added resource limits and requests
- Improved container security with non-root user
- Added comprehensive monitoring and alerting

🧪 Testing:
- Added unit tests for application
- Created Terraform integration tests with Terratest
- Added security scanning with Bandit, Safety, and Trivy
- Added infrastructure validation scripts
- Created comprehensive testing documentation

📚 Documentation:
- Added detailed testing guide (TESTING.md)
- Enhanced deployment scripts
- Added security guidelines
- Improved README with testing instructions

🎮 Game Improvements:
- Fixed blackjack split hands to work independently
- Enhanced input validation with better error messages
- Improved user experience with proper split hand display
- Added debug logging for troubleshooting

This commit represents a major overhaul of the casino cloud app with
production-ready DevOps practices, comprehensive testing, and critical
bug fixes for the gaming functionality.

--- a/infra/k8s/deployment.yaml
+++ b/infra/k8s/deployment.yaml
@@ -3,7 +3,12 @@ kind: Deployment
 metadata:
   name: casino-app
 spec:
-  replicas: 1
+  replicas: 3
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   selector:
     matchLabels:
       app: casino
@@ -21,9 +26,37 @@ spec:
           image: lironsaada/casino-app:latest
           ports:
             - containerPort: 5000
+          env:
+            - name: SECRET_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: casino-secrets
+                  key: secret-key
+            - name: FLASK_ENV
+              value: "production"
+          resources:
+            requests:
+              memory: "128Mi"
+              cpu: "100m"
+            limits:
+              memory: "256Mi"
+              cpu: "200m"
+          livenessProbe:
+            httpGet:
+              path: /metrics
+              port: 5000
+            initialDelaySeconds: 30
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /metrics
+              port: 5000
+            initialDelaySeconds: 5
+            periodSeconds: 5
           volumeMounts:
             - name: users-volume
               mountPath: /data
       volumes:
         - name: users-volume
-          emptyDir: {}
+          persistentVolumeClaim:
+            claimName: casino-pvc
