--- a/infra/k8s/pvc.yaml
+++ b/infra/k8s/pvc.yaml
@@ -1,10 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: users-pvc
+  name: casino-pvc
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany  # Allow multiple pods to access
+  storageClassName: azurefile  # Azure Files for shared storage
   resources:
     requests:
-      storage: 1Gi
+      storage: 5Gi
