--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-Flask==2.3.3
-Werkzeug==2.3.7
-prometheus-client==0.17.1
+Flask==3.0.0
+Werkzeug==3.0.1
+prometheus-client==0.19.0
+redis==5.0.1
+gunicorn==21.2.0
+pytest==7.4.3
