fix: Resolve GHCR permissions and image naming issues
🔧 Fixes:
- Added required 'packages: write' permission for GHCR push
- Fixed image name format from ghcr.io/user/repo/image to ghcr.io/user/repo
- Removed undefined 'production' environment reference
- Corrected Docker registry authentication for GitHub Container Registry

This should resolve the 'installation not allowed to Create organization package' error
and enable successful Docker image builds and pushes to GHCR.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ main ]
 
+permissions:
+  contents: read
+  packages: write
+
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: casino-cloud-app
@@ -67,7 +71,7 @@ jobs:
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: ${{ env.REGISTRY }}/${{ github.repository }}/${{ env.IMAGE_NAME }}
+        images: ${{ env.REGISTRY }}/${{ github.repository }}
         tags: |
           type=ref,event=branch
           type=ref,event=pr
@@ -89,7 +93,6 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
-    environment: production
     
     steps:
     - uses: actions/checkout@v4
