🚀 test: Full pipeline with Azure credentials
✅ Azure service principal configured
✅ AZURE_CREDENTIALS secret added to GitHub
🧪 Testing complete CI/CD pipeline: test → build → deploy
🐳 Docker images will be pushed to ghcr.io/lironsaada/casino-cloud-app

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Casino App
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, feature/improvements-and-fixes ]
   pull_request:
     branches: [ main ]
 
