🐳 ci: Complete Docker Hub integration
✅ Updated workflow to push to Docker Hub (lironsaada/casino-cloud-app)
✅ Updated Kubernetes deployment to use Docker Hub images
🔧 Configured with Docker Hub credentials
🌐 Images will be publicly accessible at docker.io/lironsaada/casino-cloud-app

Ready for full CI/CD pipeline test: test → build → push to Docker Hub → deploy to Azure AKS

--- a/infra/k8s/deployment.yaml
+++ b/infra/k8s/deployment.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
         - name: casino
-          image: lironsaada/casino-app:latest
+          image: lironsaada/casino-cloud-app:latest
           ports:
             - containerPort: 5000
           env:
