🔐 feat: Update passwords to admin123 and add testing guide
- Update all admin and Grafana passwords to admin123
- Add comprehensive testing section to README
- Update quick-start.sh for automated password setup
- Provide clear test credentials for easy app testing

--- a/env.example
+++ b/env.example
@@ -3,10 +3,10 @@
 
 # Flask Application Settings
 SECRET_KEY=your-generated-secret-key-here-use-python-secrets-token-hex-32
-ADMIN_PASSWORD=your-secure-admin-password
+ADMIN_PASSWORD=admin123
 
 # Monitoring Settings  
-GRAFANA_ADMIN_PASSWORD=your-grafana-admin-password
+GRAFANA_ADMIN_PASSWORD=admin123
 
 # Optional: Flask Environment
 FLASK_ENV=development
